[package]
name = "gmssl-rs-sys"
version = "0.1.0"
edition = "2021"
links = "gmssl"
description = "Low-level FFI bindings to the GmSSL cryptographic library"
repository = "https://github.com/GmSSL/gmssl-rs"
homepage = "https://github.com/GmSSL/gmssl-rs"
documentation = "https://docs.rs/gmssl-rs-sys"
license = "Apache-2.0"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
