[package]
name = "gmssl"
version = "0.1.0"
edition = "2021"
description = "Safe, idiomatic Rust wrapper for the GmSSL cryptographic library (SM2/SM3/SM4/SM9/ZUC/X.509)"
repository = "https://github.com/guanzhi/GmSSL-Rust"
homepage = "https://github.com/guanzhi/GmSSL-Rust"
documentation = "https://docs.rs/gmssl"
license = "Apache-2.0"
keywords = ["cryptography", "gmssl", "sm2", "sm3", "sm4", "sm9", "zuc"]
categories = ["cryptography", "api-bindings"]

[dependencies]
gmssl-sys = { path = "../gmssl-sys" }
libc = "0.2"

[dev-dependencies]
hex = "0.4"
